# evergen

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Evergen_DataPlatformEngineer_CaseStudy.docx  PLAN.md  README.md  docker-compose.yml  pyproject.toml  run.sh  workspace.yaml
.claude/skills/: dagster.md  data-modeling.md  dbt.md  dlt-ingestion.md  snowflake.md  testing-quality.md
.dlt/: config.toml  secrets.toml.example
data/ddl/: DDL.sql
files/: source1_orders.csv  source2_fulfillment.csv
ingestion/: pipeline.py
ingestion/sources/: fulfillment.py  orders.py
orchestration/: definitions.py
orchestration/assets/: dbt_assets.py  raw_assets.py
orchestration/checks/: asset_checks.py
orchestration/resources/: dbt_resource.py  dlt_resource.py
orchestration/schedules/: pipeline_schedule.py
tests/unit/: test_fulfillment_source.py  test_orders_source.py
transform/: dbt_project.yml  package-lock.yml
transform/macros/: normalize_date.sql  normalize_sku.sql
transform/models/marts/: _mart_models.yml  mart_fill_rate.sql  mart_unfulfilled_orders.sql  mart_unmatched_fulfillments.sql
transform/models/staging/: _sources.yml  _stg_models.yml  stg_fulfillment.sql  stg_orders.sql
transform/tests/: assert_fill_rate_not_exceed_threshold.sql  assert_no_negative_fill_rate.sql  assert_unfulfilled_qty_positive.sql
